[project]
name = "un-reports-gallery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "pandas>=2.3.1",
    "requests>=2.32.0",
    "lxml>=5.3.0",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.13.4",
    "tqdm>=4.67.1",
]
